RESOLVED FIXED112436
REGRESSION (r127277): CSS URIs with multi-byte Unicode escape sequences fail to parse
https://bugs.webkit.org/show_bug.cgi?id=112436
Summary REGRESSION (r127277): CSS URIs with multi-byte Unicode escape sequences fail ...
Andy Estes
Reported 2013-03-15 05:34:42 PDT
REGRESSION (r127277): CSS URIs with multi-byte Unicode escape sequences fail to parse
Attachments
Patch (11.78 KB, patch)
2013-03-15 05:56 PDT, Andy Estes
msaboff: review+
Andy Estes
Comment 1 2013-03-15 05:36:57 PDT
Andy Estes
Comment 2 2013-03-15 05:56:57 PDT
Andy Estes
Comment 3 2013-03-15 11:28:49 PDT
Note You need to log in before you can comment on or make changes to this bug.